<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/exercise_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/exercise_name"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/exercise_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_description"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/add_exercise_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/add_exercise" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>