<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="6">

    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/exercise_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/minus_sets_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus" />

        <EditText
            android:id="@+id/sets_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_reps"
            android:inputType="number"
            android:minHeight="48dp"
            android:gravity="center" />


        <Button
            android:id="@+id/plus_sets_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/minus_weight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus" />

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="number"
            android:minHeight="48dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/plus_weight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

    </LinearLayout>


    <Button
        android:id="@+id/add_set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center"
        android:text="@string/add_set" />

    <ListView
        android:id="@+id/sets_list_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

</GridLayout>

