<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/exercise_new_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/new_exercise_name"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/exercise_new_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/new_exercise_description"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/edit_exercise_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:text="@string/change_name" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>